--- a/SocialDistribution/frontend/edit.html
+++ b/SocialDistribution/frontend/edit.html
@@ -104,7 +104,7 @@
                     document.getElementById("textcontent").value=post.content;
                 }
                 else if(post.contentType==="text/markdown"){
-                    content_isText=true;
+                    content_isMarkdown=true;
                     document.getElementById("textchoice").checked=true;
                     document.getElementById("inputcontenttext").removeAttribute("hidden");
                     document.getElementById("textcontent").removeAttribute("hidden");
@@ -132,6 +132,8 @@
 
             if(document.querySelector('input[name = "textorfile"]:checked').value ==="text"){
                 content_isText=true;
+                content_isMarkdown=false;
+                content_isFile=false
                 document.getElementById("inputcontenttext").removeAttribute("hidden");
                 document.getElementById("textcontent").removeAttribute("hidden");
                 document.getElementById("choosefiletext").hidden = true;
@@ -140,6 +142,8 @@
 
             else if(document.querySelector('input[name = "textorfile"]:checked').value ==="text/markdown"){
                 content_isMarkdown=true;
+                content_isText=false;
+                content_isFile=false
                 document.getElementById("inputcontenttext").removeAttribute("hidden");
                 document.getElementById("textcontent").removeAttribute("hidden");
                 document.getElementById("choosefiletext").hidden = true;
@@ -148,6 +152,8 @@
 
             else{
                 content_isFile=true;
+                content_isMarkdown=false;
+                content_isText=false;
                 document.getElementById("choosefiletext").removeAttribute("hidden");
                 document.getElementById("filecontent").removeAttribute("hidden");
                 document.getElementById("inputcontenttext").hidden=true;
