comment to inbox fixed

--- a/SocialDistribution/frontend/index.html
+++ b/SocialDistribution/frontend/index.html
@@ -64,8 +64,8 @@
                             <form id= "form-{{post.id}}" class="form">
                                 <input type="text" name="comment" class="comment-input"
                                     placeholder="Write a comment..." >
-                                <button type="submit" id= "form-{{post.id}}" value = '{{host}}/service/authors/{{request.user.id}}/posts/{{post.id}}/comments' class="btn btn-primary" onclick="CommentFunction(value,id)">Submit</button>
                             </form>
+                            <button type="submit" id= "form-{{post.id}}" value = '{{host}}/service/authors/{{request.user.id}}/posts/{{post.id}}/comments' name='{{host}}/service/authors/{{request.user.id}}/inbox' class="btn btn-primary" onclick="CommentFunction(value,id,name)">Submit</button>
                         </div>
                         <button name = "demo-{{post.id}}" value = '{{host}}/service/authors/{{post.author.id}}/posts/{{post.id}}/comments' onclick="showComment(value, name)">Show Comments</button>
                         <p id="demo-{{post.id}}" value = '{{host}}/service/authors/{{post.author.id}}/posts/{{post.id}}/comments' onclick="showComment(value, id)"></p>
@@ -74,10 +74,11 @@
             </div>
         </div>
         <script>
-            function CommentFunction(value,id){
+            function CommentFunction(value,id,name){
                 var forml = document.getElementById(id)
                 const newform = new FormData(forml)
                 const data = Object.fromEntries(newform)
+                var response;
                 fetch(value, {
                     method: 'POST',
                     headers: {
@@ -85,7 +86,21 @@
                         'Content-Type': 'application/json',
                     },
                     body: JSON.stringify(data)
-                }).then(res => res.json());
+                }).then(res => res.json()) 
+                .then(item => {
+                console.log(item)
+                fetch(name, {
+                    method: 'POST',
+                    headers: {
+                        'X-CSRFToken': "{{ csrf_token }}",
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify(item)
+                })
+                }).then(function(){
+                    alert("A new comment is successfully created! Redirecting you to post-list page...");
+                    location.href = '{{host}}'+'/site/posts';
+                })
             }
             function LikeFunction(value,inbox,title){
                
