first draft - send friend's post to inbox

--- a/SocialDistribution/frontend/Inboxs.html
+++ b/SocialDistribution/frontend/Inboxs.html
@@ -82,6 +82,6 @@ function DeclineFollowFunction(value,name,id){
 
 </script>
 {% else %}
-<p>No posts are available.</p>
+<p>No items are available.</p>
 {% endif %}
 {% endblock %}
