changed edit posts

--- a/SocialDistribution/frontend/index.html
+++ b/SocialDistribution/frontend/index.html
@@ -23,7 +23,7 @@
             
                             <div class="col pb-3">
                                 <a href="{{host}}/editpost/{{post.id}}"><button
-                                        class="btn btn-warning float-right" type="button" class="btn">Edit
+                                        class="btn btn-light float-right" type="button" class="btn">Edit
                                         post</button></a>
                             </div>
                             <div class="col mt-4">
