--- a/SocialDistribution/frontend/base.html
+++ b/SocialDistribution/frontend/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
