Revert "Post detail page, share post and github activity page"

--- a/SocialDistribution/frontend/index.html
+++ b/SocialDistribution/frontend/index.html
@@ -14,7 +14,7 @@
                     <div class="row">
                         <div class="col">
                             <h4 class="card-title">
-                                <a href="{{host}}/site/{{post.id}}" style="color: black;">{{ post.title }}</a>
+                                <a href="{{ post.id }}" style="color: black;">{{ post.title }}</a>
                             </h4>
                             <p style="font-size:medium"><strong>By </strong><a class="author-link" style="color:white" href="{{host}}/authors/{{ post.author.id }}">{{ post.author.displayName }}</a></p>
                         </div>
