--- a/SocialDistribution/frontend/Inboxs.html
+++ b/SocialDistribution/frontend/Inboxs.html
@@ -14,7 +14,8 @@
                 <div class="card-header text-black">
                     <div class="row">
                         <div class="col">
-                            <li> {{ post.message }}</li><li style="text-align: right">{{ post.published|date:"Y-m-d H:i:s"}}</li>
+                            <h7> {{ post.message }}</h7><p class="text-muted small float-right style="text-align: right">{{ post.published|date:"Y-m-d H:i:s"}}</p>
+                            
                          </div>
                     {% if post.object_type == "follow" %}
                         <div class="col">
@@ -28,7 +29,9 @@
                     {%endif%}
                     </div>
                 </div>
+            
             </div>
+            <br>
         </div>
     </div>
 </div>
